--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
 body {
 text-align: center;
 }
+input {
+  border: 0;
+  padding: 15px;
+  font-size: 18px;
+}
+input[type='submit] {
+background: red;
+color: white;
+}
